<resources>
    <string name="app_name">MedReminder</string>
    <string name="register">Регистрация</string>
    <string name="login_subtitle">Ваш личный помощник по приёму лекарств</string>
    <string name="hint_login">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_repeat_password">Повтор пароля</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_local">Войти локально</string>
    <string name="action_sign_up">Создать аккаунт</string>
    <string name="action_sign_up_local">Создать локальный профиль</string>
    <string name="action_to_register">Регистрация</string>
    <string name="today">Сегодня</string>
    <string name="today_with_date">Сегодня, %1$s</string>
    <string name="day_prev">&lt;</string>
    <string name="day_next">&gt;</string>
    <string name="courses">Курсы</string>
    <string name="drugs">Препараты</string>
    <string name="journal">Журнал</string>
    <string name="settings">Настройки</string>
    <string name="empty_today">На сегодня приёмов нет. Отличный день.</string>
    <string name="empty_day">На %1$s приёмов нет.</string>
    <string name="action_taken">Принял</string>
    <string name="action_cancel_taken">Отменить принятие</string>
    <string name="action_skip">Пропустить</string>
    <string name="action_postpone">Перенести</string>
    <string name="status_taken">Принято</string>
    <string name="taken_canceled">Принятие отменено</string>
    <string name="status_skipped">Пропущено</string>
    <string name="status_postponed">Перенесено</string>
    <string name="status_planned">Ожидает</string>
    <string name="status_unknown">Неизвестно</string>
    <string name="action_save">Сохранить</string>
    <string name="action_cancel">Отмена</string>
    <string name="search">Поиск</string>
    <string name="add_course">Добавить курс</string>
    <string name="add_drug">Добавить препарат</string>
    <string name="new_course">Новый курс</string>
    <string name="dosage">Дозировка</string>
    <string name="start_date">Дата начала</string>
    <string name="end_date">Дата окончания</string>
    <string name="times_per_day">Время приема</string>
    <string name="interval_hhmm">Интервал (HH:mm)</string>
    <string name="interval_help">Интервал задаётся как HH:mm (например 02:30)</string>
    <string name="add_time">Добавить время</string>
    <string name="clear_times">Очистить время</string>
    <string name="configure_interval">Настроить интервал</string>
    <string name="clear_interval">Сбросить интервал</string>
    <string name="interval_not_set">Не задан</string>
    <string name="choose_drug">Выбрать из справочника</string>
    <string name="notification_before_intake">Уведомлять заранее</string>
    <string name="configure_notify_before">Настроить заранее</string>
    <string name="clear_notify_before">Без опережения</string>
    <string name="notification_type">Тип уведомления</string>
    <string name="server_url">Адрес сервера</string>
    <string name="theme_mode">Тема</string>
    <string name="check_connection">Проверить подключение</string>
    <string name="sync_dictionary">Синхронизировать справочник</string>
    <string name="quiet_mode">Тихий режим</string>
    <string name="quiet_from">С</string>
    <string name="quiet_to">До</string>
    <string name="choose_date">Выбрать дату</string>
    <string name="postpone_date">Дата переноса</string>
    <string name="postpone_time">Время переноса</string>
    <string name="notification_title">Пора принять лекарство</string>
    <string name="notification_channel_name">Напоминания о лекарствах</string>
    <string name="notification_channel_desc">Уведомления о приёме лекарств</string>
    <string name="server_unavailable">Сервер недоступен. Работаем офлайн.</string>
    <string name="server_auth_required">Требуется вход на сервере с правами доступа.</string>
    <string name="auth_failed">Неверный логин или пароль</string>
    <string name="local_auth_failed">Локальный профиль не найден или пароль неверный</string>
    <string name="local_profile_created">Локальный профиль создан</string>
    <string name="local_profile_exists">Логин уже занят локально</string>
    <string name="server_login_exists">Логин уже занят на сервере</string>
    <string name="local_login_fallback_hint">Сервер недоступен. Используйте локальный вход.</string>
    <string name="validation_login">Логин: от 4 до 12 символов</string>
    <string name="validation_password">Пароль: от 8 до 14 символов</string>
    <string name="password_mismatch">Пароли не совпадают</string>
    <string name="empty_fields">Заполните все поля</string>
    <string name="sync_ok">Справочник синхронизирован</string>
    <string name="sync_fail">Ошибка синхронизации</string>
    <string name="connection_ok">Сервер доступен</string>
    <string name="filter_date">Дата</string>
    <string name="filter_drug">Препарат</string>
    <string name="empty_courses">Курсы не найдены</string>
    <string name="empty_drugs">Справочник пуст</string>
    <string name="drug_added">Препарат добавлен</string>
    <string name="drug_already_exists">Препарат с таким названием уже есть</string>
    <string name="admin_only_action">Доступно только для администратора</string>
    <string name="validation_drug_name">Название препарата: от 2 до 50 символов</string>
    <string name="validation_drug_form">Форма выпуска: от 2 до 50 символов</string>
    <string name="validation_drug_dosage">Дозировка: от 1 до 50 символов</string>
    <string name="validation_drug_substance">Действующее вещество: от 1 до 50 символов</string>
    <string name="validation_drug_country">Страна: от 3 до 56 символов</string>
    <string name="validation_drug_manufacturer">Производитель: от 2 до 50 символов</string>
    <string name="hint_drug_name">Наименование</string>
    <string name="hint_drug_form">Форма выпуска</string>
    <string name="hint_drug_dosage">Дозировка</string>
    <string name="hint_active_substance">Действующее вещество</string>
    <string name="hint_country">Страна</string>
    <string name="hint_manufacturer">Производитель</string>
    <string name="minutes_short_template">%1$d мин</string>
    <string name="course_info_template">%1$s • %2$s - %3$s</string>
    <string name="course_active">Активный</string>
    <string name="course_finished">Завершён</string>
    <string name="drug_details_template">%1$s • %2$s • %3$s</string>
    <string name="drug_producer_template">%1$s • %2$s</string>
    <string name="fallback_drug_name">Препарат</string>
    <string name="empty_logs">Записей пока нет</string>
    <string name="stats_template">Всего: %1$d • Принято: %2$d • Пропущено: %3$d • Соблюдение: %4$s%%</string>
    <string name="planned_at">План: %1$s</string>
    <string name="actual_at">Факт: %1$s</string>
    <string name="logout">Выйти</string>
    <string name="delete_course">Удалить курс</string>
    <string name="confirm_delete_course">Удалить курс и все его напоминания?</string>
    <string name="confirm_logout">Выйти из аккаунта?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
</resources>
