<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_today"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/today" />
    <item
        android:id="@+id/nav_courses"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/courses" />
    <item
        android:id="@+id/nav_drugs"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/drugs" />
    <item
        android:id="@+id/nav_log"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/journal" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings" />
</menu>
